--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,10 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 ./idea
+
+# Ambiente virtual do Python/Flask
+venv/
+
+# Arquivos compilados do Python
+__pycache__/
+*.py[cod]
