#20 #10 #23 e organização das pastas e arquivos

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,6 @@ venv/
 # Arquivos compilados do Python
 __pycache__/
 *.py[cod]
+
+# Arquivo de segredos do Streamlit (CONTÉM SENHAS!)
+.streamlit/secrets.toml
